logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: logging
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.12.2
        ports:
        - containerPort: 5044
        - containerPort: 5045
        volumeMounts:
        - name: logstash-pipeline
          mountPath: /usr/share/logstash/pipeline
      volumes:
      - name: logstash-pipeline
        configMap:
          name: logstash-pipeline-config

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: logging
spec:
  ports:
  - port: 5044
    targetPort: 5044
  selector:
    app: logstash
